# rust-machine-learning

./: .gitignore  README.md
guessing_game/src/: main.rs
minigrep/src/: lib.rs
rectangles/src/: main.rs
rust_poly_net/: Cargo.toml
rust_poly_net/benches/: training_benchmark.rs
rust_poly_net/src/: architecture.rs  dataloader.rs  lib.rs  main.rs  number_representations.rs
rust_poly_net/src/number_representations/: core.rs  mod.rs
rust_poly_net/src/number_representations/float/: f16.rs  f32.rs  mod.rs
rust_poly_net/src/number_representations/posit/: core.rs  mod.rs  posit16_1.rs  posit16_2.rs  posit32_2.rs
rust_poly_net/src/number_representations/softposit/: mod.rs  softposit16_1.rs  softposit32_2.rs
tic_tac_toe/: Cargo.toml
tic_tac_toe/src/: main.rs
