[package]
name = "rust_poly_net"
version = "0.1.0"
edition = "2024"

[dependencies]
half = { version = "2.6.0", features = ["num-traits"] }
ndarray = "0.16.1"
rand = "0.9.1"
rand_distr = "0.5.1"
flate2 = "1.1.2"
num-traits = "0.2"
softposit="0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "training_benchmark"
harness = false
